--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,3 +3,17 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..60,200;8..60,300;8..60,400;8..60,500;8..60,600;8..60,700&display=swap');
+
+@layer base {
+    * {
+        @apply antialiased;
+    }
+    p {
+        @apply text-black dark:text-white font-manrope;
+    }
+    span {
+        @apply text-black dark:text-white;
+    }
+}
