--- a/styles/HomePage.module.scss
+++ b/styles/HomePage.module.scss
@@ -12,7 +12,7 @@
         justify-content: center;
         align-items: center;
         width: 90%;
-        padding-top: 150px;
+        height: 100vh;
         .left {
             display: flex;
             flex-direction: column;
