--- a/styles/HomePage.module.scss
+++ b/styles/HomePage.module.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..60,200;8..60,300;8..60,400;8..60,500;8..60,600;8..60,700&display=swap');
+@import './responsive.scss';
 
 .container {
     display: flex;
@@ -11,16 +12,31 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: row;
         width: 90%;
         height: 100vh;
+        @include tablet {
+            flex-direction: column;
+            width: 100%;
+            gap: 2rem;
+        }
         .left {
             display: flex;
             flex-direction: column;
             width: 60%;
+            @include tablet {
+                width: 90%;
+            }
             .name {
-                padding: 20px;
+                padding-bottom: 20px;
                 p {
                     font-size: 1.3rem;
+                    @include tablet {
+                        font-size: 1rem;
+                    }
+                    @include mobile {
+                        font-size: 0.7rem;
+                    }
                 }
                 p:before {
                     content: '';
@@ -30,6 +46,14 @@
                     background-color: #fff;
                     margin-right: 10px;
                     margin-bottom: 5px;
+                    @include mobile {
+                        width: 30px;
+                        height: 2px;
+                        margin-bottom: 0;
+                    }
+                }
+                @include mobile {
+                    padding-bottom: 10px;
                 }
             }
             .presentation {
@@ -38,6 +62,9 @@
                     font-size: 6.5vw;
                     line-height: 1;
                     font-family: 'Source Serif 4', serif;
+                    @include mobile {
+                        font-size: 2rem;
+                    }
                 }
             }
             
@@ -46,11 +73,20 @@
             display: flex;
             flex-direction: column;
             width: 40%;
+            @include tablet {
+                width: 90%;
+            }
+            @include mobile {
+                align-items: center;
+            }
             .description {
                 margin-bottom: 50px;
                 p {
                     font-size: 2vw;
                     line-height: 1.2;
+                    @include tablet {
+                        font-size: 0.9rem;
+                    }
                 }
             }
             .description::before {
@@ -61,6 +97,10 @@
                 background-color: #fff;
                 margin-right: 10px;
                 margin-bottom: 5px;
+                @include mobile {
+                    width: 30px;
+                    height: 2px;
+                }
             }
         }
     }
