feat: add h1, h2 default style

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,4 +16,10 @@
     span {
         @apply text-black dark:text-white;
     }
+    h1 {
+        @apply text-black dark:text-white font-manrope;
+    }
+    h2 {
+        @apply text-black dark:text-white font-manrope;
+    }
 }
