--- a/styles/ProjectBox.module.scss
+++ b/styles/ProjectBox.module.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     width: 60vw;
+    padding-bottom: 30px;
     &::before {
         content: '';
         display: block;
