--- a/styles/TechItem.module.scss
+++ b/styles/TechItem.module.scss
@@ -1,11 +1,19 @@
+@import './responsive.scss';
+
 .box {
     width: fit-content;
     border: 1px solid #fff;
     border-radius: 25px;
     padding: 0.3rem 0.7rem 0.2rem 0.7rem;
+    @include mobile {
+        padding: 0.2rem 0.5rem 0.1rem 0.5rem;
+    }
     p {
         color: #fff;
         font-size: 14px;
         text-transform: uppercase;
+        @include mobile {
+            font-size: 10px;
+        }
     }
 }
