feat: add animated menu

--- a/styles/Hamburger.module.scss
+++ b/styles/Hamburger.module.scss
@@ -1,9 +1,9 @@
 .hamburger {
-    background-color: transparent;
-    border: 0;
+    background-color: red;
     cursor: pointer;
     display: block;
     height: 24px;
+    width: 24px;
     margin: 0;
     padding: 0;
     position: relative;
