--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -1,10 +1,12 @@
 @import './responsive.scss';
 
-.wrapper {
+.about__container {
+    background-color: black;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    width: 90%;
+    width: 100%;
+    height: 100vh;
     gap: 2rem;
     margin-bottom: 300px;
     @include mobile {
