--- a/styles/LineButton.module.scss
+++ b/styles/LineButton.module.scss
@@ -1,17 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..60,200;8..60,300;8..60,400;8..60,500;8..60,600;8..60,700&display=swap');
+
 .button {
+    overflow: hidden;
     width: fit-content;
+    height: 40px;
     cursor: pointer;
-    border: 1px solid #fff;
+    border: 1px solid rgba(255,255,255,0.5);
     border-radius: 25px;
     padding: 0.5rem 1rem;
     transition: all 0.2s ease-in-out;
     .button_text {
         color: #fff;
+        position: relative;
+    }
+    .button_text_hover {
+        color: #fff;
+        position: relative;
+        font-family: 'Source Serif 4', serif;
+        top: -30px;
+        opacity: 0;
     }
     &:hover {
-        background-color: #fff;
-        p {
-            color: #000;
-        }
+        border: 1px solid rgba(255,255,255,1);
     }
 }
