feat: add text reveal animation

--- a/styles/HomePage.module.scss
+++ b/styles/HomePage.module.scss
@@ -57,7 +57,7 @@
             }
             .presentation {
                 padding-right: 80px;
-                p {
+                span {
                     font-size: 6.5vw;
                     line-height: 1;
                     font-family: 'Source Serif 4', serif;
