--- a/styles/Hamburger.module.scss
+++ b/styles/Hamburger.module.scss
@@ -8,7 +8,7 @@
     position: relative;
     border-radius: 50%;
     border: 1px solid rgba(255, 255, 255, 0.3);
-    transition: all 0.6s ease;
+    transition: all 0.3s ease;
     .hamburger__box {
         display: flex;
         flex-direction: column;
@@ -16,7 +16,7 @@
         align-items: center;
         height: 35%;
         width: 100%;
-        transition: all 0.6s ease;
+        transition: all 0.3s ease;
         .hamburger__inner {
             background-color: white;
             content: "";
@@ -25,7 +25,7 @@
             height: 1px;
             margin-bottom: 3px;
             position: relative;
-            transition: all 0.6s ease;
+            transition: all 0.3s ease;
             &:last-child {
                 margin-bottom: 0;
             }
@@ -33,17 +33,20 @@
     }
     &:hover {
         background-color: #fff;
-        transition: all 0.6s ease;
+        transition: all 0.3s ease;
         .hamburger__box {
             justify-content: space-around;
-            transition: all 0.6s ease;
+            transition: all 0.3s ease;
             .hamburger__inner {
                 background-color: #000;
-                transition: all 0.6s ease;
+                transition: all 0.3s ease;
             }
         }
     }
     .hamburger__box__open {
-        background-color: red;
+        transition: all 0.3s ease;
+        .hamburger__inner {
+            transition: all 0.3s ease;
+        }
     }
 }
