--- a/styles/Hamburger.module.scss
+++ b/styles/Hamburger.module.scss
@@ -21,7 +21,7 @@
             background-color: white;
             content: "";
             display: block;
-            width: 14px;
+            width: 15px;
             height: 1px;
             margin-bottom: 3px;
             position: relative;
@@ -32,21 +32,49 @@
         }
     }
     &:hover {
-        background-color: #fff;
+        border: 1px solid rgba(255, 255, 255, 1);
         transition: all 0.3s ease;
         .hamburger__box {
-            justify-content: space-around;
             transition: all 0.3s ease;
             .hamburger__inner {
-                background-color: #000;
                 transition: all 0.3s ease;
+                &:first-child {
+                    transform: translateY(-3px);
+                }
+                &:last-child {
+                    transform: translateY(3px);
+                }
             }
         }
     }
     .hamburger__box__open {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        width: 100%;
         transition: all 0.3s ease;
         .hamburger__inner {
             transition: all 0.3s ease;
+            background-color: white;
+            content: "";
+            display: block;
+            width: 15px;
+            height: 1px;
+            position: relative;
+            transition: all 0.3s ease;
+            &:first-child {
+                margin-bottom: 0;
+                transform: rotate(-45deg);
+            }
+            &:last-child {
+                margin-bottom: 0;
+                transform: rotate(45deg);
+            }
+        }
+        &:hover {
+            transform: rotate(90deg);
         }
     }
 }
