--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..60,200;8..60,300;8..60,400;8..60,500;8..60,600;8..60,700&display=swap');
+
 .contact {
     display: flex;
     flex-direction: column;
@@ -42,9 +44,24 @@
         align-items: center;
         justify-content: space-between;
         width: 300px;
-        a {
+        .links__link {
+            display: flex;
+            flex-direction: column;
+            height: 100px;
+            width: fit-content;
+            overflow: hidden;
             text-transform: uppercase;
-            font-size: 5vw;
+            font-size: 5rem;
+            cursor: pointer;
+            text-align: center;
+        }
+        .links__link__text {
+            position: relative;
+        }
+        .links__link__text__hover {
+            position: relative;
+            font-family: 'Source Serif 4', serif;
+            font-size: 5.5rem;
         }
     }
 }
