--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     width: 90%;
-    margin-bottom: 100px;
+    top: -100px;
     .header {
         display: flex;
         flex-direction: row;
