feat: add content

--- a/styles/AboutPage.module.scss
+++ b/styles/AboutPage.module.scss
@@ -27,5 +27,17 @@
         }
       }
     }
+    .about__courses {
+      .about__softsills {
+        section {
+          p {
+            font-size: 3.5vw;
+            font-family: 'Source Serif 4', serif;
+            line-height: 1.5;
+            text-align: center;
+          }
+        }
+      }
+    }
   }
 }
