--- a/styles/AboutPage.module.scss
+++ b/styles/AboutPage.module.scss
@@ -34,18 +34,21 @@
       align-items: center;
       justify-content: center;
       .about__objectivs {
-        width: 65%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         margin-bottom: 100px;
         h2 {
           font-size: 2vw;
           line-height: 1;
           text-transform: uppercase;
+          margin-bottom: 100px;
         }
         p {
+          width: 65%;
           //font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;
           font-family: 'garamond', serif;
           font-size: 4.5vw;
-          line-height: 1.5;
           font-weight: 100;
           text-transform: uppercase;
           text-align: center;
@@ -53,11 +56,39 @@
         }
       }
       .about__softskills {
-        p {
-          font-size: 1.3vw;
-          line-height: 1.5;
-          text-transform: uppercase;
-          text-align: center;
+        .box__content {
+          position: relative;
+          .label {
+            background: red;
+            padding: 10px;
+            color: #fff;
+            cursor: pointer;
+            h2 {
+              font-size: 1rem;
+              line-height: 1;
+              text-transform: uppercase;
+            }
+            &::before {
+              content: '+';
+              position: absolute;
+              top: 15%;
+              right: 20px;
+              transform: translateX(-50%);
+              font-size: 1rem;
+            }
+          }
+          .content {
+            position: relative;
+            height: 0;
+            overflow: hidden;
+            transition: 0.5s ease;
+            overflow-y: auto;
+            p {
+              font-size: 1.3vw;
+              line-height: 1.5;
+              text-transform: uppercase;
+            }
+          }
         }
       }
     }
