--- a/styles/ScrollingText.module.scss
+++ b/styles/ScrollingText.module.scss
@@ -15,6 +15,7 @@
         height: 0.5px;
         width: 90%;
         background-color: white;
+        opacity: 0.5;
         margin-bottom: 0.6rem;
     }
     &::after {
@@ -25,6 +26,7 @@
         width: 90%;
         bottom: 0;
         background-color: white;
+        opacity: 0.5;
         margin-top: 0.6rem;
     }
     span {
