--- a/styles/AboutPage.module.scss
+++ b/styles/AboutPage.module.scss
@@ -58,8 +58,8 @@
       .about__softskills {
         .box__content {
           position: relative;
+          transition: 0.5s ease;
           .label {
-            background: red;
             padding: 10px;
             color: #fff;
             cursor: pointer;
@@ -87,6 +87,25 @@
               font-size: 1.3vw;
               line-height: 1.5;
               text-transform: uppercase;
+            }
+          }
+          &.active {
+            transition: 0.5s ease;
+            .label {
+              cursor: pointer;
+              &::before {
+                content: '-';
+                position: absolute;
+                top: 15%;
+                right: 20px;
+                transform: translateX(-50%);
+                font-size: 1rem;
+              }
+            }
+            .content {
+              height: 100%;
+              padding: 10px;
+              transition: 0.5s ease;
             }
           }
         }
