--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..60,200;8..60,300;8..60,400;8..60,500;8..60,600;8..60,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&display=swap');
+@import './responsive.scss';
 
 .contact {
     display: flex;
@@ -14,12 +15,18 @@
         justify-content: space-between;
         width: 100%;
         margin-bottom: 200px;
+        @include tablet {
+            margin-bottom: 100px;
+        }
         .text_box {
             display: flex;
             width: 200px;
             justify-content: center;
             p {
                 text-transform: uppercase;
+                @include tablet {
+                    font-size: 0.7rem;
+                }
             }
             &:nth-of-type(3) {
                 p {
@@ -29,14 +36,23 @@
         }
     }
     .email {
-        width: 70%;
+        width: 75%;
         text-align: center;
         margin-bottom: 100px;
         overflow-wrap: break-word;
         a {
             text-transform: uppercase;
-            font-size: 5vw;
+            font-size: 6vw;
             font-family: 'Cormorant Garamond', serif;
+            -webkit-text-fill-color: transparent;
+            -webkit-text-stroke: 1px;
+            transition: all .2s ease-in-out;
+            @include tablet {
+                font-size: 2.5rem;
+            }
+        }
+        a:hover {
+            -webkit-text-fill-color: #fff;
         }
     }
     .links {
@@ -49,6 +65,9 @@
             text-transform: uppercase;
             font-size: 0.9rem;
             position: relative;
+            @include tablet {
+                font-size: 0.7rem;
+            }
         }
         a::before {
             content: '';
@@ -62,11 +81,11 @@
             transform-origin: right;
             transform: scaleX(0);
             transition: transform .3s ease-in-out;
-          }
-          
-          a:hover::before {
+        }
+        
+        a:hover::before {
             transform-origin: left;
             transform: scaleX(1);
-          }
+        }
     }
 }
