--- a/styles/AboutPage.module.scss
+++ b/styles/AboutPage.module.scss
@@ -38,6 +38,13 @@
         flex-direction: column;
         align-items: center;
         margin-bottom: 100px;
+        gap: 300px;
+        @include laptop {
+          gap: 90px;
+        }
+        @include tablet {
+          gap: 70px;
+        }
         h2 {
           font-size: 2vw;
           line-height: 1;
@@ -53,6 +60,10 @@
           text-transform: uppercase;
           text-align: center;
           line-height: 1;
+          @include tablet {
+            width: 90%;
+            font-size: 1.5rem;
+          }
         }
       }
       .about__softskills {
