--- a/styles/ContactPage.module.scss
+++ b/styles/ContactPage.module.scss
@@ -3,4 +3,10 @@
   flex-direction: column;
   align-items: center;
   padding-top: 200px;
+  .contact__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
 }
