--- a/styles/Request.module.scss
+++ b/styles/Request.module.scss
@@ -1,3 +1,5 @@
+@import './responsive.scss';
+
 .request__container {
   display: flex;
   flex-direction: column;
@@ -6,6 +8,9 @@
   width: 100vw;
   height: 100vh;
   padding-top: 5rem;
+  @include tablet {
+    padding-top: 2rem;
+  }
   .request__wrapper {
     display: flex;
     flex-direction: column;
@@ -14,13 +19,21 @@
     .form__container {
       border: 1px solid rgba(255, 255, 255, 0.4);
       border-radius: 20px;
+      @include tablet {
+        width: 80%;
+      }
       .form {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        position: relative;
         gap: 30px;
         padding: 2rem;
+        @include tablet {
+          gap: 15px;
+          padding: 1.5rem;
+        }
         .form__group {
           display: flex;
           flex-direction: column;
@@ -49,6 +62,12 @@
             }
             &::placeholder {
               color: rgba(255, 255, 255, 0.3);
+            }
+            @include tablet {
+              height: 2.5rem;
+            }
+            @include mobile {
+              height: 2rem;
             }
           }
           textarea {
@@ -91,6 +110,12 @@
           color: #fff;
           &:hover {
             background-color: rgba(255, 255, 255, 0.2);
+          }
+          @include tablet {
+            height: 2.5rem;
+          }
+          @include mobile {
+            height: 2rem;
           }
         }
       }
