feat: finish new style

--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -10,25 +10,43 @@
     top: -100px;
     margin-bottom: 30px;
     .contact__wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
         .contact__header {
+            background-color: red;
+            width: 100%;
             .contact__header__title {
-                
+                text-align: center;
+                font-size: 3vw;
             }
         }
         .contact__hero {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            background-color: green;
+            width: 100%;
+            padding-top: 6rem;
+            padding-bottom: 6rem;
             .contact__hero__left {
+                background-color: purple;
+                width: 50%;
                 .contact__hero__subtitle {
-                    font-family: 'Source Serif 4', serif;
-                    font-size: 1.5rem;
+                    font-size: 7vw;
                     font-weight: 400;
                     margin-bottom: 10px;
                 }
             }
             .contact__hero__right {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 50%;
                 .link__box {
                     .link__box__header {
                         .link__box__header__title {
-                            font-family: 'Source Serif 4', serif;
                             font-size: 1.5rem;
                             font-weight: 400;
                             margin-bottom: 10px;
@@ -38,7 +56,6 @@
                         ul {
                             li {
                                 a {
-                                    font-family: 'Source Serif 4', serif;
                                     font-size: 1.5rem;
                                     font-weight: 400;
                                     margin-bottom: 10px;
@@ -50,26 +67,37 @@
             }
         }
         .contact__footer {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            background-color: blue;
+            width: 100%;
             .contact__footer__left {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
                 h3 {
-                    font-family: 'Source Serif 4', serif;
                     font-size: 1.5rem;
                     font-weight: 400;
                     margin-bottom: 10px;
+                    margin-right: 20px;
                 }
                 ul {
+                    display: flex;
+                    flex-direction: row;
+                    gap: 20px;
                     li {
-                        font-family: 'Source Serif 4', serif;
-                        font-size: 1.5rem;
+                        font-size: 1rem;
                         font-weight: 400;
                         margin-bottom: 10px;
                     }
                 }
             }
             .contact__footer__right {
+                display: flex;
+                align-items: center;
                 p {
-                    font-family: 'Source Serif 4', serif;
-                    font-size: 1.5rem;
+                    font-size: 1rem;
                     font-weight: 400;
                     margin-bottom: 10px;
                 }
