--- a/styles/Blob.module.scss
+++ b/styles/Blob.module.scss
@@ -1,6 +1,14 @@
 .blob {
-  background-color: white;
   height: 500px;
   aspect-ratio: 1;
   position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  background: linear-gradient(
+    to right,
+    aquamarine,
+    mediumpurple
+  );
 }
