--- a/styles/AboutPage.module.scss
+++ b/styles/AboutPage.module.scss
@@ -1,26 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..60,200;8..60,300;8..60,400;8..60,500;8..60,600;8..60,700&display=swap');
 @import './responsive.scss';
 
-.about__container {
+.container {
   display: flex;
   flex-direction: column; 
   align-items: center;
-  .about__wrapper {
+  .wrapper {
     display: flex;
     flex-direction: column; 
     align-items: center;
     width: 90%;
     min-height: 100vh;
     margin-bottom: 50px;
-    .about__intro {
+    .intro {
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
-      .about__title {
+      .title {
         width: 80%;
-        .about__title__text {
+        .title__text {
           font-size: 7vw;
           font-family: 'cormorant', serif;
           font-weight: lighter;
@@ -29,12 +29,12 @@
         }
       }
     }
-    .about__course {
+    .course {
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      .about__objectivs {
+      .objectivs {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -46,79 +46,25 @@
         @include tablet {
           gap: 70px;
         }
-        h2 {
-          font-size: 2vw;
-          line-height: 1;
-          text-transform: uppercase;
-          margin-bottom: 100px;
-        }
-        p {
-          width: 65%;
-          //font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;
-          font-family: 'garamond', serif;
-          font-size: 4.5vw;
-          font-weight: 100;
-          text-transform: uppercase;
-          text-align: center;
-          line-height: 1;
-          @include tablet {
-            width: 90%;
-            font-size: 1.5rem;
+        .content {
+          h2 {
+            font-size: 2vw;
+            line-height: 1;
+            text-transform: uppercase;
+            margin-bottom: 100px;
           }
-        }
-      }
-      .about__softskills {
-        margin-bottom: 100px;
-        .box__content {
-          position: relative;
-          transition: 0.5s ease;
-          .label {
-            padding: 10px;
-            color: #fff;
-            cursor: pointer;
-            h2 {
-              font-size: 1rem;
-              line-height: 1;
-              text-transform: uppercase;
-            }
-            &::before {
-              content: '+';
-              position: absolute;
-              top: 15%;
-              right: 20px;
-              transform: translateX(-50%);
-              font-size: 1rem;
-            }
-          }
-          .content {
-            position: relative;
-            height: 0;
-            overflow: hidden;
-            transition: 0.5s ease;
-            overflow-y: auto;
-            p {
-              font-size: 1.3vw;
-              line-height: 1.5;
-              text-transform: uppercase;
-            }
-          }
-          &.active {
-            transition: 0.5s ease;
-            .label {
-              cursor: pointer;
-              &::before {
-                content: '-';
-                position: absolute;
-                top: 15%;
-                right: 20px;
-                transform: translateX(-50%);
-                font-size: 1rem;
-              }
-            }
-            .content {
-              height: 100%;
-              padding: 10px;
-              transition: 0.5s ease;
+          p {
+            width: 65%;
+            //font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;
+            font-family: 'garamond', serif;
+            font-size: 4.5vw;
+            font-weight: 100;
+            text-transform: uppercase;
+            text-align: center;
+            line-height: 1;
+            @include tablet {
+              width: 90%;
+              font-size: 1.5rem;
             }
           }
         }
