--- a/styles/AboutPage.module.scss
+++ b/styles/AboutPage.module.scss
@@ -66,9 +66,18 @@
           justify-content: space-between;
           border-bottom: 1px solid rgba(255, 255, 255, 0.2);
           padding: 50px;
+          @include tablet {
+            flex-direction: column;
+            padding: 20px;
+            gap: 20px;
+            align-items: flex-start;
+          }
           h2 {
             font-size: 1rem;
             text-transform: uppercase;
+            @include laptop {
+              font-size: 0.8rem;
+            }
           }
           p {
             width: 60%;
@@ -76,9 +85,16 @@
             font-weight: 100;
             text-align: center;
             line-height: 1;
+            opacity: 0.6;
+            @include laptop {
+              font-size: 1rem;
+              width: 50%;
+            }
             @include tablet {
-              width: 90%;
-              font-size: 1.5rem;
+              font-size: 1rem;
+              width: 100%;
+              text-align: start;
+              line-height: 1.2;
             }
           }
         }
