--- a/styles/AboutPage.module.scss
+++ b/styles/AboutPage.module.scss
@@ -46,12 +46,25 @@
           text-transform: uppercase;
           margin-bottom: 20px;
           text-align: center;
+          font-weight: 400;
+          @include tablet {
+            font-size: 1.2rem;
+          }
+          @include mobile {
+            font-size: 1rem;
+          }
         }
         p {
           font-size: 1.4rem;
-          font-weight: 100;
+          font-weight: 400;
           text-align: center;
           line-height: 1;
+          @include tablet {
+            font-size: 1.2rem;
+          }
+          @include mobile {
+            font-size: 1rem;
+          }
         }
       }
       .objectivs {
