--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -1,2 +1,44 @@
 @import './responsive.scss';
 
+.container {
+    z-index: 1;
+    .wrapper {
+        .title {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            gap: 1rem;
+            .roadmap__line {
+                .icon {
+
+                }
+                .line {
+
+                }
+            }
+            .text {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                justify-content: center;
+                width: 60%;
+                gap: 1rem;
+                .text__title {
+                    font-size: 1.5rem;
+                    font-weight: 400;
+                }
+                .text__description {
+                    font-size: 3rem;
+                    font-weight: 400;
+                    line-height: 1.1;
+                    span {
+                        font-size: 3rem;
+                        font-weight: 400;
+                        color: red;
+                    }
+                }
+            }
+        }
+    }
+}
