--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -10,14 +10,29 @@
             justify-content: center;
             gap: 3rem;
             .roadmap__line {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 2rem;
+                padding: 0.2rem;
                 .icon {
-
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    .filter {
+                        background-color: #ec6547;
+                        filter: blur(18px);
+                        width: 30px;
+                        height: 30px;
+                        position: absolute;
+                    }
                 }
                 .line {
                     background: linear-gradient(#ffd6cc, #ec6547, #ec6547, #ec6547);
                     transition-delay: 500ms;
                     width: 3px;
                     height: 500px;
+                    border-radius: 10px;
                 }
             }
             .text {
@@ -29,7 +44,7 @@
                 gap: 1rem;
                 .text__title {
                     font-size: 1.5rem;
-                    font-weight: 400;
+                    font-weight: 600;
                 }
                 .text__description {
                     font-size: 3rem;
