--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -20,7 +20,7 @@
                     align-items: center;
                     justify-content: center;
                     .filter {
-                        background-color: #ec6547;
+                        background-color: #ffd6cc;
                         filter: blur(18px);
                         width: 30px;
                         height: 30px;
@@ -28,10 +28,10 @@
                     }
                 }
                 .line {
-                    background: linear-gradient(#ffd6cc, #ec6547, #ec6547, #ec6547);
+                    background: linear-gradient(#ffd6cc, #ec6547, #ec6547, #222222);
                     transition-delay: 500ms;
                     width: 3px;
-                    height: 500px;
+                    height: 300px;
                     border-radius: 10px;
                 }
             }
@@ -55,6 +55,12 @@
                         font-weight: 400;
                         color: #ec6547;
                     }
+                }
+                p {
+                    font-size: 1.5rem;
+                    font-weight: 400;
+                    line-height: 1.2;
+                    opacity: 0.5;
                 }
             }
         }
